# ML-HSE-Course

./: .gitignore  README.md  main.py  pyproject.toml
homework1/: part1.ipynb  part2.ipynb
homework1/microtorch/: pyproject.toml
homework1/microtorch/src/microtorch/activation/: __init__.py  interface.py  relu.py  tanh.py
homework1/microtorch/src/microtorch/layer/: __init__.py  linear.py  sequiential.py
homework1/microtorch/src/microtorch/loss/: __init__.py  cross_entropy_with_logits.py
homework1/microtorch/src/microtorch/module/: __init__.py  module.py
homework1/microtorch/src/microtorch/optimizer/: __init__.py  adam.py  interface.py
homework1/microtorch/src/microtorch/utils/: __init__.py  parameter.py
