[project]
name = "ml-hse-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "plotly>=6.3.0",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "microtorch",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "homework1/microtorch",
]

[tool.uv.sources]
microtorch = { workspace = true }
