[project]
name = "microtorch"
version = "0.1.0"
description = "Homework framework for MLP with torch-like API"
readme = "README.md"
authors = [
    { name = "Maksim Shushkevich", email = "m.e.shushkevich@yandex.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
